# bolt

./: Cargo.toml  test.bolt  test_program.bolt
.github/workflows/: ci.yml
crates/bolt-ast/: Cargo.toml
crates/bolt-ast/src/: expr.rs  lib.rs  stmt.rs  types.rs  visitor.rs
crates/bolt-cli/: Cargo.toml
crates/bolt-cli/src/: main.rs
crates/bolt-codegen/: Cargo.toml
crates/bolt-lexer/: Cargo.toml
crates/bolt-lexer/src/: error.rs  lexer.rs  lib.rs  position.rs  token.rs
crates/bolt-parser/: Cargo.toml
crates/bolt-parser/src/: error.rs  expr.rs  lib.rs  parser.rs  stmt.rs  types.rs
crates/bolt-semantic/: Cargo.toml
crates/bolt-semantic/src/: error.rs  lib.rs  resolver.rs  scope.rs  symbol.rs
crates/bolt-types/: Cargo.toml
